# btc-agent-lightning

./: .env.sample  .gitignore  README.md  langgraph.json  main.py  pyproject.toml  requirements.txt  run_local_environment.py  testing.py
alice/: alice.py  langgraph-alice.json
charlie/: charlie.py  langgraph-charlie.json
my_agent/: agent.py  alice.py  bob.py  charlie.py
my_agent/utils/: agent_workflow.py  nodes.py  state.py  tools.py
src/coordinator/: agent.py
src/lightning_agent/utils/: agent_workflow.py  nodes.py
